--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.listParent {
+  overflow: scroll;
+  height: 500px;
+  width: 75%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
